# weeder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Recursive.hs  cabal.project  cabal.project.haskell-nix  cborg.nix  default.nix  dhall.nix  flake.nix  fourmolu.yaml  hie.yaml  shell.nix  treefmt.toml  weeder.cabal  weeder.dhall  weeder.toml
.changes/: 2.6.0.md  2.7.0.md  header.tpl.md  v2.5.0.md
.changes/unreleased/: Added-20230809-210333.yaml  Added-20230809-210449.yaml  Added-20230809-213152.yaml  Added-20230809-213311.yaml  Changed-20230707-133907.yaml  Changed-20230809-211755.yaml  Changed-20230809-213454.yaml
.devcontainer/: compose.yaml  devcontainer.json
.github/workflows/: nix-build.yml
exe-weeder/: Main.hs
nix/: sources.json
nix/haskell/: algebraic-graphs.nix  cabal-doctest.nix  cborg-json.nix  cborg.nix  dhall.nix  ghcide.nix  haskeline.nix  haskell-lsp-types.nix  haskell-lsp.nix  haskell-src-exts.nix  hie-bios.nix  hslogger.nix  inspection-testing.nix  lens.nix  lsp-test.nix  megaparsec.nix  prettyprinter.nix  safe-exceptions.nix  vector-th-unbox.nix  yaml.nix
src/: Weeder.hs
src/Weeder/: Analysis.hs  Config.hs  Main.hs  New.hs  New2.hs  Run.hs
test/: Main.hs  Spec.hs  UnitTests.hs
test/Spec/: ApplicativeDo.failing  ApplicativeDo.toml  BasicExample.dhall  BasicExample.stdout  BasicExample.toml  ConfigInstanceModules.stdout  ConfigInstanceModules.toml  DeriveGeneric.dhall  DeriveGeneric.stdout  DeriveGeneric.toml  InstanceRootConstraint.toml  InstanceTypeclass.dhall  InstanceTypeclass.stdout  InstanceTypeclass.toml  ModuleRoot.stdout  ModuleRoot.toml  Monads.dhall  Monads.failing  Monads.toml  NumInstance.dhall  NumInstance.toml  NumInstanceLiteral.dhall  NumInstanceLiteral.failing  NumInstanceLiteral.toml  OverloadedLabels.stdout  OverloadedLabels.toml  OverloadedLists.dhall  OverloadedLists.failing  OverloadedLists.toml  OverloadedStrings.dhall  OverloadedStrings.failing  OverloadedStrings.toml  OverloadedStringsNoSig.dhall  OverloadedStringsNoSig.toml  RangeEnum.dhall  RangeEnum.failing  RangeEnum.toml  RootClasses.stdout  RootClasses.toml  StandaloneDeriving.dhall  (+12 more)
test/Spec/ApplicativeDo/: ApplicativeDo.hs
test/Spec/BasicExample/: BasicExample.hs
test/Spec/ConfigInstanceModules/: Module1.hs  Module2.hs  Module3.hs
test/Spec/DeriveGeneric/: DeriveGeneric.hs
test/Spec/InstanceRootConstraint/: InstanceRootConstraint.hs
test/Spec/InstanceTypeclass/: InstanceTypeclass.hs
test/Spec/ModuleRoot/: InstanceNotRoot.hs  M.hs
test/Spec/Monads/: Monads.hs
test/Spec/NumInstance/: NumInstance.hs
test/Spec/NumInstanceLiteral/: NumInstanceLiteral.hs
test/Spec/OverloadedLabels/: OverloadedLabels.hs
test/Spec/OverloadedLists/: OverloadedLists.hs
test/Spec/OverloadedStrings/: OverloadedStrings.hs
test/Spec/OverloadedStringsNoSig/: OverloadedStringsNoSig.hs
test/Spec/RangeEnum/: RangeEnum.hs
test/Spec/RootClasses/: RootClasses.hs
test/Spec/StandaloneDeriving/: StandaloneDeriving.hs
test/Spec/TemplateHaskell/: TH.hs  User.hs
test/Spec/TypeAliasGADT/: TypeAliasGADT.hs
test/Spec/TypeDataDecl/: TypeDataDecl.hs
test/Spec/TypeFamilies/: TypeFamilies.hs  TypeFamilyUsage.hs
test/Spec/Types/: Types.hs  Usages.hs
test/Spec/TypesUnused/: TypesUnused.hs
test/UnitTests/Weeder/: ConfigSpec.hs
test/Weeder/: ConfigSpec.hs
tests/: Main.hs
tests/test-cases/: Default declarations retain references.hs  Instances retain top level bindings.hs  Rewrite rules retain references.hs  Type signatures retain data types.hs
