cabal-version: 3.0
license:       BSD-3-Clause
license-file:  LICENSE
name:          weeder
author:        Ollie Charles <ollie@ocharles.org.uk>
maintainer:    Ollie Charles <ollie@ocharles.org.uk>
build-type:    Simple
version:       2.6.0
copyright:     Neil Mitchell 2017-2020, Oliver Charles 2020-2023
synopsis:      Detect dead code
description:   Find declarations.
homepage:      https://github.com/ocharles/weeder#readme
bug-reports:   https://github.com/ocharles/weeder/issues
category:      Development
extra-doc-files:
    README.md
    CHANGELOG.md
extra-source-files:
    test/Spec/*.toml
    test/Spec/*.stdout

library
  build-depends:
    , algebraic-graphs     ^>= 0.7
    , base                 ^>= 4.17.0.0 || ^>= 4.18.0.0
    , bytestring           ^>= 0.10.9.0 || ^>= 0.11.0.0
    , containers           ^>= 0.6.2.1
    , directory            ^>= 1.3.3.2
    , filepath             ^>= 1.4.2.1
    , generic-lens         ^>= 2.2.0.0
    , ghc                  ^>= 9.4 || ^>= 9.6
    , lens                 ^>= 5.1 || ^>= 5.2
    , mtl                  ^>= 2.2.2 || ^>= 2.3
    , optparse-applicative ^>= 0.14.3.0 || ^>= 0.15.1.0 || ^>= 0.16.0.0 || ^>=  0.17
    , regex-tdfa           ^>= 1.2.0.0 || ^>= 1.3.1.0
    , text                 ^>= 2.0.1
    , toml-reader          ^>= 0.2.0.0
    , transformers         ^>= 0.5.6.2 || ^>= 0.6
  hs-source-dirs: src
  exposed-modules:
    Weeder
    Weeder.Config
    Weeder.Main
  autogen-modules:
    Paths_weeder
  other-modules:
    Paths_weeder
  ghc-options: -Wall -fwarn-incomplete-uni-patterns
  default-language: Haskell2010


executable weeder
  build-depends:
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , ghc
    , optparse-applicative
    , transformers
    , weeder
  main-is: Main.hs
  hs-source-dirs: exe-weeder
  ghc-options: -Wall -fwarn-incomplete-uni-patterns
  default-language: Haskell2010

test-suite weeder-test
  build-depends:
    , aeson
    , algebraic-graphs
    , base
    , directory
    , filepath
    , ghc
    , hspec
    , process
    , silently
    , text
    , toml-reader
    , weeder
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  autogen-modules:
    Paths_weeder
  other-modules:
    Paths_weeder
    -- Tests
    Spec.BasicExample.BasicExample
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -fwrite-ide-info -hiedir ./test
  default-language: Haskell2010
