cabal-version: 3.0
license:       BSD-3-Clause
license-file:  LICENSE
name:          weeder
author:        Ollie Charles <ollie@ocharles.org.uk>
maintainer:    Ollie Charles <ollie@ocharles.org.uk>
build-type:    Simple
version:       2.7.0
copyright:     Neil Mitchell 2017-2020, Oliver Charles 2020-2023
synopsis:      Detect dead code
description:   Find declarations.
homepage:      https://github.com/ocharles/weeder#readme
bug-reports:   https://github.com/ocharles/weeder/issues
category:      Development
extra-doc-files:
    README.md
    CHANGELOG.md
extra-source-files:
    test/Spec/*.toml
    test/Spec/*.stdout
    test/Spec/*.failing

library
  build-depends:
    , algebraic-graphs     ^>= 0.7
    , async                ^>= 2.2.5
    , base                 ^>= 4.19.0.0
    , bytestring           ^>= 0.12.0.2
    , containers           ^>= 0.6.8
    , directory            ^>= 1.3.8.1
    , filepath             ^>= 1.4.100.4
    , generic-lens         ^>= 2.2.2.0
    , ghc                  ^>= 9.8.1
    , lens                 ^>= 5.2.3
    , mtl                  ^>= 2.3.1
    , optparse-applicative ^>= 0.18.1.0
    , parallel             ^>= 3.2.2.0
    , regex-tdfa           ^>= 1.3.2.2
    , text                 ^>= 2.1
    , toml-reader          ^>= 0.2.1.0
    , transformers         ^>= 0.6.1.0
  hs-source-dirs: src
  exposed-modules:
    Weeder
    Weeder.Config
    Weeder.Run
    Weeder.Main
  autogen-modules:
    Paths_weeder
  other-modules:
    Paths_weeder
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -threaded
  default-language: Haskell2010


executable weeder
  build-depends:
    , base
    , bytestring
    , containers
    , directory
    , filepath
    , ghc
    , optparse-applicative
    , transformers
    , weeder
  main-is: Main.hs
  hs-source-dirs: exe-weeder
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -threaded -no-rtsopts-suggestions -with-rtsopts=-N
  default-language: Haskell2010

test-suite weeder-test
  build-depends:
    , aeson
    , algebraic-graphs
    , base
    , containers
    , directory
    , filepath
    , ghc
    , hspec
    , process
    , text
    , toml-reader
    , weeder
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  autogen-modules:
    Paths_weeder
  other-modules:
    Paths_weeder
    UnitTests
    -- Tests
    Spec.ApplicativeDo.ApplicativeDo
    Spec.BasicExample.BasicExample
    Spec.ConfigInstanceModules.Module1
    Spec.ConfigInstanceModules.Module2
    Spec.ConfigInstanceModules.Module3
    Spec.DeriveGeneric.DeriveGeneric
    Spec.InstanceRootConstraint.InstanceRootConstraint
    Spec.InstanceTypeclass.InstanceTypeclass
    Spec.Monads.Monads
    Spec.NumInstance.NumInstance
    Spec.NumInstanceLiteral.NumInstanceLiteral
    Spec.OverloadedLabels.OverloadedLabels
    Spec.OverloadedLists.OverloadedLists
    Spec.OverloadedStrings.OverloadedStrings
    Spec.RangeEnum.RangeEnum
    Spec.RootClasses.RootClasses
    Spec.StandaloneDeriving.StandaloneDeriving
    Spec.TypeAliasGADT.TypeAliasGADT
    Spec.TypeDataDecl.TypeDataDecl
    Spec.Types.Types
    Spec.Types.Usages
    Spec.TypeFamilies.TypeFamilies
    Spec.TypeFamilies.TypeFamilyUsage
    Spec.TypesUnused.TypesUnused
    UnitTests.Weeder.ConfigSpec
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -fwrite-ide-info -hiedir ./test
  default-language: Haskell2010
