cabal-version: 3.0
license:       BSD-3-Clause
license-file:  LICENSE
name:          weeder
author:        Ollie Charles <ollie@ocharles.org.uk>
maintainer:    Ollie Charles <ollie@ocharles.org.uk>
build-type:    Simple
version:       2.9.0
copyright:     Neil Mitchell 2017-2020, Oliver Charles 2020-2024
synopsis:      Detect dead code
description:   Find declarations.
homepage:      https://github.com/ocharles/weeder#readme
bug-reports:   https://github.com/ocharles/weeder/issues
category:      Development
extra-doc-files:
    README.md
    CHANGELOG.md
extra-source-files:
    test/Spec/*.toml
    test/Spec/*.stdout
    test/Spec/*.failing

library
  build-depends:
    , algebraic-graphs     ^>= 0.7
    , async                ^>= 2.2.0
    , base                 ^>= 4.17.0.0 || ^>= 4.18.0.0 || ^>= 4.19.0.0
    , bytestring           ^>= 0.10.9.0 || ^>= 0.11.0.0 || ^>= 0.12.0.2
    , containers           ^>= 0.6.2.1
    , directory            ^>= 1.3.3.2
    , filepath             ^>= 1.4.2.1
    , generic-lens         ^>= 2.2.0.0
    , ghc                  ^>= 9.4 || ^>= 9.6 || ^>= 9.8
    , Glob                 ^>= 0.9 || ^>= 0.10
    , lens                 ^>= 5.1 || ^>= 5.2 || ^>= 5.3
    , mtl                  ^>= 2.2.2 || ^>= 2.3
    , optparse-applicative ^>= 0.14.3.0 || ^>= 0.15.1.0 || ^>= 0.16.0.0 || ^>=  0.17 || ^>= 0.18.1.0
    , parallel             ^>= 3.2.0.0
    , regex-tdfa           ^>= 1.2.0.0 || ^>= 1.3.1.0
    , text                 ^>= 2.0.1 || ^>= 2.1
    , toml-reader          ^>= 0.2.0.0
    , transformers         ^>= 0.5.6.2 || ^>= 0.6
  hs-source-dirs: src
  exposed-modules:
    Weeder
    Weeder.Config
    Weeder.Run
    Weeder.Main
  autogen-modules:
    Paths_weeder
  other-modules:
    Paths_weeder
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -threaded
  default-language: Haskell2010

executable weeder
  build-depends:
    , base
    , weeder
  main-is: Main.hs
  hs-source-dirs: exe-weeder
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -threaded -no-rtsopts-suggestions -with-rtsopts=-N
  default-language: Haskell2010

test-suite weeder-test
  build-tool-depends:
    hspec-discover:hspec-discover
  build-depends:
    , aeson
    , algebraic-graphs
    , base
    , containers
    , directory
    , filepath
    , ghc
    , process
    , tasty
    , tasty-hunit-compat
    , tasty-golden
    , text
    , toml-reader
    , weeder
    , hspec-expectations
    , text
    , bytestring
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  autogen-modules:
    Paths_weeder
  other-modules:
    Paths_weeder
    -- Tests
    Spec.ApplicativeDo.ApplicativeDo
    Spec.BasicExample.BasicExample
    Spec.ConfigInstanceModules.Module1
    Spec.ConfigInstanceModules.Module2
    Spec.ConfigInstanceModules.Module3
    Spec.DeriveGeneric.DeriveGeneric
    Spec.InstanceRootConstraint.InstanceRootConstraint
    Spec.InstanceTypeclass.InstanceTypeclass
    Spec.ModuleRoot.InstanceNotRoot
    Spec.ModuleRoot.M
    Spec.Monads.Monads
    Spec.NumInstance.NumInstance
    Spec.NumInstanceLiteral.NumInstanceLiteral
    Spec.OverloadedLabels.OverloadedLabels
    Spec.OverloadedLists.OverloadedLists
    Spec.OverloadedStrings.OverloadedStrings
    Spec.RangeEnum.RangeEnum
    Spec.RootClasses.RootClasses
    Spec.StandaloneDeriving.StandaloneDeriving
    Spec.TypeAliasGADT.TypeAliasGADT
    Spec.TypeDataDecl.TypeDataDecl
    Spec.Types.Types
    Spec.Types.Usages
    Spec.TypeFamilies.TypeFamilies
    Spec.TypeFamilies.TypeFamilyUsage
    Spec.TypesUnused.TypesUnused
    UnitTests.Weeder.ConfigSpec
  ghc-options: -Wall -fwarn-incomplete-uni-patterns -fwrite-ide-info -hiedir ./test
  default-language: Haskell2010
